# azure-devops-slack

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  convert_users.py  main.py  obfuscate.py  pyproject.toml  requirements.txt  slack-app.manifest.json  tasks.py
.github/workflows/: build.yaml  test.yaml
src/: api.py  devops.py  flask_app.py  handlers.py  messages.py  schemas.py  settings.py  slack.py  utils.py
tests/: conftest.py  helpers.py  test_backend.py  test_payload.py
tests/__snapshots__/: test_backend.ambr
tests/__snapshots__/test_payload/: test_comment_added.json  test_comment_left_for_a_specific_line.json  test_comment_with_screenshot.json  test_general_comment_left.json  test_ms_event_comment_added.json  test_new_changes_pushed.json  test_new_changes_pushed_no_pat.json  test_pr_approved.json  test_pr_created_with_reviewers.json  test_wait_for_changes.json
tests/samples/: api_commit.json  comment_added.json  comment_for_a_line.json  comment_with_screenshot.json  comment_without_a_file.json  ms_comment_added.json  new_changes_pushed.json  pr_approved.json  pr_created_no_reviewers.json  pr_created_with_reviewers.json  wait_for_changes.json
